--- a/index.html
+++ b/index.html
@@ -8,29 +8,40 @@
 <body>
   
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="index.html">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="about.html">About us</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown link
+          Category
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+           <div class="dropdown-header">Australian</div>
+  <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Cafe</a>
+          <a class="dropdown-item" href="#">Pub</a>
+          <a class="dropdown-item" href="#">Restaurant</a>
+  </div>
+  <div class="dropdown-header">Asian</div>
+  <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Japanese</a>
+          <a class="dropdown-item" href="#">Chinese</a>
+          <a class="dropdown-item" href="#">Other Asian</a>
+  </div>
+                     <div class="dropdown-header">Others</div>
+  <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Italian</a>
+          <a class="dropdown-item" href="#">Others</a>
+          </div>       
         </div>
       </li>
     </ul>
