--- a/index.html
+++ b/index.html
@@ -25,21 +25,19 @@
           Category
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-           <div class="dropdown-header">Australian</div>
+           
   <div class="dropdown-menu">
+    <h6 class="dropdown-header">Australian</h6>
           <a class="dropdown-item" href="#">Cafe</a>
           <a class="dropdown-item" href="#">Pub</a>
           <a class="dropdown-item" href="#">Restaurant</a>
-  </div>
-  <div class="dropdown-header">Asian</div>
-  <div class="dropdown-menu">
+    
+    <h6 class="dropdown-header">Asian</h6>
           <a class="dropdown-item" href="#">Japanese</a>
           <a class="dropdown-item" href="#">Chinese</a>
           <a class="dropdown-item" href="#">Other Asian</a>
-  </div>
-                     <div class="dropdown-header">Others</div>
-  <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Italian</a>
+  <h6 class="dropdown-header">Others</h6>
+            <a class="dropdown-item" href="#">Italian</a>
           <a class="dropdown-item" href="#">Others</a>
           </div>       
         </div>
